--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="%PUBLIC_URL%/images/favicon.svg" rel="icon" />
+  <script src="https://kit.fontawesome.com/f677a13f9c.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>X Reality</title>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
