Cleaned up all of my code, added credits and updated build files

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     content="First."
   />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <meta property="og:title" content="3D portfolio (Extended Reality)" />
+  <meta property="og:description" content="First person portfolio by Iris Maenhout." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://gdmgent-2324-xr.github.io/fpp-IrisMaenhout/" />
+  <meta property="og:image" content="https://gdmgent-2324-xr.github.io/fpp-IrisMaenhout/images/3d_portfolio.jpg" />
+  <meta property="og:image:alt" content="Bedroom" />
+
   <link href="%PUBLIC_URL%/images/favicon.svg" rel="icon" />
   <script src="https://kit.fontawesome.com/f677a13f9c.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
